--- a/templates/home.html
+++ b/templates/home.html
@@ -1,23 +1,91 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Scrapper</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
-</head>
-<body>
-    <main class="container">
-        <h1>원하는 직업이 있으신가요?!</h1>
-    <h4>어떤 직업을 찾으시나요?</h4>
-    <form action ="/search">   
-        <!-- 여기서 action은 데이터가 전송될 url을 지정하는 것이다 ex) /검색?keyword=파이썬 이렇게 실행된다 -->
-        <input type="text" name="keyword" placeholder="원하는 직종을 작성해주세요."/>
-        <button>검색</button>
-    </form>
-    <!-- <h1>Hello to you my name is {{name}}</h1> -->
-    </main>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Job Scrapper</title>
+  <!-- <link rel="stylesheet" href="./home.css" /> -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      background-color: #4b93e3;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .container {
+      width: 40%;
+      margin: auto;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .container h1 {
+      font-family: "Bungee", cursive;
+      color: #fff;
+      text-align: center;
+    }
+
+    .container form {
+      position: relative;
+      display: flex;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    }
+
+    .container input {
+      width: 100%;
+      height: 50px;
+      padding: 0;
+      border-width: 0;
+      padding-left: 10px;
+      border-radius: 3px;
+    }
+
+    .container input:focus {
+      outline: none;
+    }
+
+    .container button {
+      background-color: #4fc3a1;
+      color: #fff;
+      font-weight: bold;
+      position: absolute;
+      top: 0;
+      right: 0;
+      border: none;
+      height: 50px;
+      width: 70px;
+      border-top-right-radius: 3px;
+      border-bottom-right-radius: 3px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  </style>
+</head>
+
+<body>
+  <main class="container">
+    <h1>FIND A JOB</h1>
+    <form action="/search">
+      <!-- 여기서 action은 데이터가 전송될 url을 지정하는 것이다 ex) /검색?keyword=파이썬 이렇게 실행된다 -->
+      <input type="text" name="keyword" placeholder="원하는 직종을 입력해주세요." />
+      <button><span class="material-symbols-outlined"> search </span></button>
+    </form>
+  </main>
 </body>
+
 </html>
